# automata-theory

./: .gitignore  CMakeLists.txt  Directory.Build.props  MysticGameScript.sln  README.md  TESTLIST.md  TODO.md
docs/competitors/: README.md  expressions-grammar.md  lexical-structure.md
docs/competitors/c++/: README.md
docs/competitors/c++/task1-CircleSquare/: CMakeLists.txt  main.cpp
docs/specification/: expressions-grammar.md  lexical-structure.md  semantics.md  top-level-grammar.md  types.md
docs/specification/examples/: CircleSquare  MilesToKm  SumDigits  SumNumbers
docs/theory/: ANTLR4-integration.md  ANTLR4-troubleshooting.md  EBNF-for-lexems.md  compilation-phases.md  compiler-architecture.md  grammar.ebnf  questions1.md  questions2.md  railway-diagrams.html
lw1/: .clang-format  .clang-tidy  CMakeLists.txt  commands  test.txt
lw1/googletest-1.14.0/googletest/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  gtest.sln  gtest.vcxproj  gtest.vcxproj.filters  gtest_main.vcxproj  gtest_main.vcxproj.filters
lw1/src/ExampleLib/: FileUtil.cpp  FileUtil.h  TextUtil.cpp  TextUtil.h
lw1/tests/: test_main.cpp
src/Ast/: Ast.csproj  IAstVisitor.cs
src/Ast/Attributes/: AstAttribute.cs
src/Ast/Declarations/: AbstractFunctionDeclaration.cs  AbstractParameterDeclaration.cs  AbstractVariableDeclaration.cs  BuiltinFunction.cs  BuiltinFunctionParameter.cs  ConstantDeclaration.cs  Declaration.cs  FunctionDeclaration.cs  Parameter.cs  ParameterDeclaration.cs  VariableDeclaration.cs
src/Ast/Expressions/: AssignmentExpression.cs  BinaryOperation.cs  BreakExpression.cs  ContinueExpression.cs  ExodusExpression.cs  Expression.cs  ForLoopExpression.cs  FunctionCall.cs  IfElseExpression.cs  IfExpression.cs  LiteralExpression.cs  RaidExpression.cs  ReturnExpression.cs  UnaryOperation.cs  VariableExpression.cs  VariableScopeExpression.cs  WhileLoopExpression.cs
src/Ast/Statements/: AssignmentStatement.cs  BreakStatement.cs  ContinueStatement.cs  ExodusStatement.cs  ForLoopStatement.cs  IfElseStatement.cs  IfStatement.cs  RaidStatement.cs  ReturnStatement.cs  WhileLoopStatement.cs
src/ExampleLib/: FileUtil.cpp
src/Execution/: AstEvaluator.cs  Builtins.cs  ConsoleEnvironment.cs  Context.cs  FakeEnvironment.cs  IEnvironment.cs  Numbers.cs  ReturnException.cs  Scope.cs
src/Execution/Exceptions/: ReturnException.cs
src/Grammar/: Grammar.csproj  MysticGameScriptGrammar.cs
src/Interpreter/: Interpreter.cs  Interpreter.csproj  Program.cs
src/Lexer/: Lexer.cs  LexerStats.cs  Numbers.cs  TextScanner.cs  Token.cs  TokenType.cs  TokenValue.cs
src/Parser/: BuiltinFunctions.cs  ConsoleEnvironment.cs  FakeEnvironment.cs  IEnvironment.cs  Parser.cs  Parser.csproj  Row.cs  TokenStream.cs  UnexpectedLexemeException.cs
src/Runtime/: Value.cs  ValueType.cs  ValueUtil.cs
src/Semantics/: Semantics.csproj  SemanticsChecker.cs
tests/Grammar.UnitTests/: Grammar.UnitTests.csproj  GrammarTests.cs  TESTLIST.md
tests/Interpreter.Specs/: InterpreterSteps.cs
tests/Lexer.UnitTests/: Lexer.UnitTests.csproj  LexerStatsTest.cs  LexerTest.cs  LexicalStatsTest.cs  TESTLIST.md  UnitTests.cs
tests/Parser.UnitTests/: ParseTopLevelStatementsTest.cs  Parser.UnitTests.csproj  ParserTest.cs  TESTLIST.md
(+37 files in other folders)
